# selector-mlp

./: .cursorrules  .gitattributes  .gitignore  README.md  cs_5787_final_project_cleaned_2.py  cs_5787_final_project_cleaned_2_edited.py  example_workflow.sh  feature_selection_job.sh  intermediate_files  pyproject.toml  requirements.txt  run_pipeline.sh  setup.py  submit_job.sh  submit_workflow.sh  train_job.sh
configs/: feature_selection.json  split_data.json  train.json
selectormlp/: __init__.py  __main__.py  data.py  feature_selection.py  models.py  split_data.py  train.py  utils.py  visualization.py
src/: __init__.py  config.json  data.py  feature_selection.py  models.py  run_training.py  split_data.py  train.py  utils.py
