[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selectormlp"
version = "2025.05.01"
description = "A PyTorch-based feature selection method for single-cell RNA sequencing data"
readme = "README.md"
authors = [
    {name = "Alex Epstein", email = "alexander.epstein96@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12.0",
    "torchmetrics>=0.11.0",
    "pytorch-lightning>=1.9.0",
    "scikit-learn>=1.0.2",
    "numpy>=1.20.0",
    "pandas>=1.4.0",
    "anndata>=0.8.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "scanpy>=1.9.0",
    "seaborn>=0.12.0",
]

[tool.setuptools]
packages = ["selectormlp"]